[BlackBerry]Missing cookies from HTTP response header in Network tab of Web Inspector. https://bugs.webkit.org/show_bug.cgi?id=82041

We shouldn't overwrite cookies of response if there are more than one
header of Set-Cookie.

Patch by Jason Liu <jason.liu@torchmobile.com.cn> on 2012-03-28
Reviewed by Rob Buis.

Test: http/tests/cookies/resources/setArraycookies.php

* platform/network/blackberry/NetworkJob.cpp:
(WebCore::NetworkJob::handleNotifyHeaderReceived):

Canonical link: https://commits.webkit.org/99902@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112494 268f45cc-cd09-0410-ab3c-d52691b4dbfc